fix text behind button

--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -127,10 +127,10 @@
                       {% endif %}
                       </a>
                       <div class="caption">
-                        <h4 class="row-fluid card-title">
+                        <h4 class="card-title">
                             {{ event.title }}
                         </h4>
-                        <p class="row-fluid text-center"  style="height: 5em" >
+                        <p class="text-center">
                           {% include "event_time.html" %}
                         </p>
                         <p class="row-fluid text-center">
