Added level "raclure de bidet"

--- a/badges/templates/badge_detail.html
+++ b/badges/templates/badge_detail.html
@@ -9,7 +9,7 @@
 
 <ol class="breadcrumb">
     <li><a href="/">UrLab</a></li>
-    <li>Badges</li>
+    <li><a href="/badges/">Badges</a></li>
     <li class="active">{{ badge.name }}</li>
 </ol>
 
@@ -17,7 +17,6 @@
     <h1>
         {{ badge.name }}
     </h1>
-    <!-- <small>{{ badge.description }}</small> -->
 
     <div class="row">
         <div class="col-md-4 col-md-push-8">
