--- a/badges/templates/badge_detail.html
+++ b/badges/templates/badge_detail.html
@@ -92,7 +92,7 @@
             </table>
             {% if is_master %}
                 <div class="container-fluid">
-                    <a href="/badges/add/" class="btn btn-success pull-right">
+                    <a href="/badges/add/{{ badge.pk }}/" class="btn btn-success pull-right">
                         <span class="fa fa-plus" aria-hidden="true"></span>
                         Ajouter un utilisateur
                     </a>
