--- a/wiki/templates/article_detail.html
+++ b/wiki/templates/article_detail.html
@@ -43,13 +43,21 @@
         <div class="tab-pane active" id="tab-current">
             {{article.content|markdown}}
         </div>
-        <div class="tab-pane" id="tab-old">
-            {% for revision in article_content_history %}
-                <div class="revision">
-                    {% include "revision.html" %}
-                </div>
-            {% endfor %}
 
+        <div class="tab-pane" id="tab-old">
+            {% if not article_content_history %}
+                <p>C'est vide ici</p>
+            {% else %}
+                {% for revision in article_content_history %}
+                    <div class = "panel panel-default">
+                        <div class = "panel-body">
+                            <p class="card-text"> modifié le {{ revision.last_modified }} par: {{ revision.creator }} <br/>
+                            commentaire: {{ revision.commit}}</p>
+                        <a href="{% url "view_old_version" revision.pk %}" class="btn btn-primary stretched-link">Visualiser</a>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
 
