--- a/wiki/templates/revision.html
+++ b/wiki/templates/revision.html
@@ -2,7 +2,7 @@
 
 <div class = "panel panel-default">
    <div class = "panel-body">
-      <p class="card-text"> modifiée le {{ revision.last_modified }} par: {{ revision.creator }} <br/>
+      <p class="card-text"> modifié le {{ revision.last_modified }} par: {{ revision.creator }} <br/>
       commentaire: {{ revision.commit}}</p>
       <a href="{% url "view_old_version" revision.pk %}" class="btn btn-primary stretched-link">Visualiser</a>
    </div>
