--- a/incubator/templates/slider.html
+++ b/incubator/templates/slider.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="item slimg">
-              <img src="/static/img/slideshow/arduino.jpg" alt="adruino">
+              <img src="/static/img/slideshow/arduino.jpg" alt="arduino">
             </div>
 
             <div class="item slimg">
