--- a/space/templates/map.html
+++ b/space/templates/map.html
@@ -3,8 +3,8 @@
 {% load humanize %}
 <div class="well">
         <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
-        <iframe width='100%' height='300px' frameBorder='0'
-                src='https://a.tiles.mapbox.com/v4/c4ptaincrunch.o1n42mc8/attribution,zoompan,zoomwheel,geocoder.html?access_token=pk.eyJ1IjoiYzRwdGFpbmNydW5jaCIsImEiOiJUdWVRSENNIn0.qssi5TBLeBinBsXkZKiI6Q#14/50.812919/4.38443799999999'></iframe>
+        <iframe width="350" height="350"
+                src="https://maps.google.com/maps?q=UrLab&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         <p>
     <hr/>
     {% if space_open %}
