[Upd] first try at updating to django3

--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
-{% load staticfiles %}
+{% load static %}
 {% load humanize %}
 
 {% block title %}
