--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -17,7 +17,7 @@
     {% bootstrap_javascript jquery=1 %}
 
         <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/ba8a2a8bc9.js" crossorigin="anonymous"></script>
         <link href="{% static "css/style.css" %}" rel="stylesheet">
         <link rel="icon" href="/static/img/favicon.ico"/>
         <title>{% block title %}UrLab{% endblock %}</title>
